[gd_scene load_steps=28 format=3 uid="uid://c4cghsw6122aj"]

[ext_resource type="Texture2D" uid="uid://cp0tbcvnregcx" path="res://art/board_layout.png" id="1_50su2"]
[ext_resource type="Script" path="res://scenes/board_scene.gd" id="1_doaey"]
[ext_resource type="Resource" uid="uid://fwry13uso5ih" path="res://scenes/test.tres" id="2_6bv8v"]
[ext_resource type="Script" path="res://scenes/ui/hand.gd" id="3_tibae"]
[ext_resource type="PackedScene" uid="uid://jlg46gnlu600" path="res://scenes/ui/health_ui.tscn" id="4_6s467"]
[ext_resource type="PackedScene" uid="uid://dpg75fuxa5jlm" path="res://scenes/player/player.tscn" id="4_myp5y"]
[ext_resource type="Script" path="res://scenes/ResourceBar.gd" id="4_vf06v"]
[ext_resource type="PackedScene" uid="uid://d3n0b2llqdfoa" path="res://scenes/card_target_selector/card_target_selector.tscn" id="4_vnl3x"]
[ext_resource type="PackedScene" uid="uid://dqcdkmgio64ef" path="res://scenes/ui/gold_ui.tscn" id="5_fmekr"]
[ext_resource type="PackedScene" uid="uid://ds77ufvfvqn3k" path="res://scenes/ui/move_ui.tscn" id="5_xo70e"]
[ext_resource type="PackedScene" uid="uid://bxgj3ykpuyk2e" path="res://scenes/ui/fight_ui.tscn" id="6_3vi0n"]
[ext_resource type="PackedScene" uid="uid://5y44wp4db60" path="res://scenes/enemy/enemy_handler.tscn" id="6_emeeq"]
[ext_resource type="PackedScene" uid="uid://baamlfnbthkdi" path="res://scenes/ui/buy_ui.tscn" id="8_ruwq4"]
[ext_resource type="Script" path="res://scenes/map/map.gd" id="8_vxxnq"]
[ext_resource type="Script" path="res://scenes/map/map_generator.gd" id="8_xe3cp"]
[ext_resource type="PackedScene" uid="uid://cuqw6uv2o8wh4" path="res://scenes/ui/draft_area.tscn" id="9_myced"]
[ext_resource type="PackedScene" uid="uid://c4olmej38c3m2" path="res://scenes/ui/card_pile_opener.tscn" id="9_oi5x1"]
[ext_resource type="Script" path="res://scenes/player_handler.gd" id="11_pv5xn"]
[ext_resource type="Script" path="res://scenes/PlayArea.gd" id="12_fnm5l"]
[ext_resource type="PackedScene" uid="uid://j4gt2sii1mtk" path="res://scenes/ui/tooltip_popup.tscn" id="19_3c61y"]
[ext_resource type="PackedScene" uid="uid://12rfq5pjfu5g" path="res://scenes/modifier_handler/modifier_handler.tscn" id="20_1ku4x"]
[ext_resource type="Script" path="res://scenes/shop_popup.gd" id="20_ir4ro"]
[ext_resource type="Script" path="res://scenes/ui/CardPileViewer.gd" id="20_pw3qc"]
[ext_resource type="PackedScene" uid="uid://drbypv8b3pnir" path="res://scenes/card/shop_card.tscn" id="21_ff8c5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mng3u"]
size = Vector2(976, 446)

[sub_resource type="LabelSettings" id="LabelSettings_dg1wj"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_h40q4"]
font_size = 30

[node name="BoardScene" type="Node2D"]
script = ExtResource("1_doaey")
character = ExtResource("2_6bv8v")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("1_50su2")

[node name="CardDropArea" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(488, 223)
shape = SubResource("RectangleShape2D_mng3u")

[node name="CardTargetSelector" parent="." instance=ExtResource("4_vnl3x")]

[node name="DraftArea" parent="." instance=ExtResource("9_myced")]
position = Vector2(983, 363)

[node name="EnemyHandler" parent="." instance=ExtResource("6_emeeq")]

[node name="Map" type="Node2D" parent="." groups=["map"]]
position = Vector2(95, 109)
script = ExtResource("8_vxxnq")

[node name="Visuals" type="Node2D" parent="Map"]

[node name="Rooms" type="Node2D" parent="Map/Visuals"]

[node name="MapGenerator" type="Node" parent="Map"]
script = ExtResource("8_xe3cp")

[node name="Player" parent="." instance=ExtResource("4_myp5y")]
position = Vector2(140, 129)
stats = ExtResource("2_6bv8v")

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("player", "hand") groups=["player_handler"]]
script = ExtResource("11_pv5xn")
player = NodePath("../Player")
hand = NodePath("../PlayArea/PlayerCards/Hand")

[node name="ResourceBar" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ResourceBar"]
offset_top = 454.0
offset_right = 976.0
offset_bottom = 496.0
color = Color(0.151276, 0.151276, 0.151276, 0.654902)

[node name="ResourceBar" type="HBoxContainer" parent="ResourceBar"]
offset_left = 19.0
offset_top = 454.0
offset_right = 976.0
offset_bottom = 496.0
theme_override_constants/separation = 43
script = ExtResource("4_vf06v")

[node name="Health" parent="ResourceBar/ResourceBar" instance=ExtResource("4_6s467")]
unique_name_in_owner = true
custom_minimum_size = Vector2(86, 42)
layout_mode = 2
show_max_hp = true

[node name="Gold" parent="ResourceBar/ResourceBar" instance=ExtResource("5_fmekr")]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 42)
layout_mode = 2

[node name="Move" parent="ResourceBar/ResourceBar" instance=ExtResource("5_xo70e")]
unique_name_in_owner = true
custom_minimum_size = Vector2(61, 42)
layout_mode = 2

[node name="Fight" parent="ResourceBar/ResourceBar" instance=ExtResource("6_3vi0n")]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 42)
layout_mode = 2

[node name="Buy" parent="ResourceBar/ResourceBar" instance=ExtResource("8_ruwq4")]
unique_name_in_owner = true
custom_minimum_size = Vector2(61, 42)
layout_mode = 2

[node name="PlayArea" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("12_fnm5l")

[node name="PlayerCards" type="HBoxContainer" parent="PlayArea"]
custom_minimum_size = Vector2(948, 0)
offset_left = 15.0
offset_top = 518.0
offset_right = 963.0
offset_bottom = 658.0
theme_override_constants/separation = 6

[node name="DrawPileButton" parent="PlayArea/PlayerCards" node_paths=PackedStringArray("counter") instance=ExtResource("9_oi5x1")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
counter = NodePath("Counter")
title = "Draw"

[node name="Counter" type="Label" parent="PlayArea/PlayerCards/DrawPileButton"]
layout_mode = 2
offset_top = 50.0
offset_right = 19.0
offset_bottom = 73.0
text = "99"

[node name="Hand" type="HBoxContainer" parent="PlayArea/PlayerCards" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
custom_minimum_size = Vector2(836, 0)
layout_direction = 3
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1
script = ExtResource("3_tibae")
player = NodePath("../../../Player")

[node name="DiscardPileButton" parent="PlayArea/PlayerCards" node_paths=PackedStringArray("counter") instance=ExtResource("9_oi5x1")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
counter = NodePath("Counter")
title = "Discard"

[node name="Counter" type="Label" parent="PlayArea/PlayerCards/DiscardPileButton"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
offset_left = 23.0
offset_top = -1.0
offset_right = 51.0
offset_bottom = 22.0
text = "999"
horizontal_alignment = 2

[node name="EndTurnButton" type="Button" parent="PlayArea"]
offset_left = 452.0
offset_top = 673.0
offset_right = 530.0
offset_bottom = 704.0
text = "End Turn"

[node name="ShopPopup" type="CanvasLayer" parent="." groups=["shop"]]
visible = false
script = ExtResource("20_ir4ro")

[node name="GrayOut" type="ColorRect" parent="ShopPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -303.0
offset_bottom = -273.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.823529)

[node name="ShopCardRow" type="HBoxContainer" parent="ShopPopup"]
offset_left = 289.0
offset_top = 135.0
offset_right = 719.0
offset_bottom = 311.0
theme_override_constants/separation = 65
alignment = 1

[node name="ShopCard" parent="ShopPopup/ShopCardRow" instance=ExtResource("21_ff8c5")]
layout_mode = 2

[node name="ShopCard2" parent="ShopPopup/ShopCardRow" instance=ExtResource("21_ff8c5")]
layout_mode = 2

[node name="ShopCard3" parent="ShopPopup/ShopCardRow" instance=ExtResource("21_ff8c5")]
layout_mode = 2

[node name="ModifierHandler" parent="ShopPopup" instance=ExtResource("20_1ku4x")]

[node name="Label" type="Label" parent="ShopPopup"]
offset_left = 406.0
offset_top = -3.0
offset_right = 574.0
offset_bottom = 42.0
text = "Storeroom"
label_settings = SubResource("LabelSettings_dg1wj")

[node name="CardPileView" type="CanvasLayer" parent="."]

[node name="CardPileViewer" type="ColorRect" parent="CardPileView"]
visible = false
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.784314)
script = ExtResource("20_pw3qc")

[node name="VBoxContainer" type="VBoxContainer" parent="CardPileView/CardPileViewer"]
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 1188.0
offset_bottom = 670.0
theme_override_constants/separation = 36

[node name="CardPileTitle" type="Label" parent="CardPileView/CardPileViewer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
text = "Test text"
label_settings = SubResource("LabelSettings_h40q4")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CardPileView/CardPileViewer/VBoxContainer"]
custom_minimum_size = Vector2(1080, 542)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="CardPileGrid" type="GridContainer" parent="CardPileView/CardPileViewer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1080, 0)
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 20
columns = 8

[node name="Tooltip" type="CanvasLayer" parent="."]

[node name="TooltipPopup" parent="Tooltip" instance=ExtResource("19_3c61y")]
visible = false

[node name="DebugButton" type="CanvasLayer" parent="."]

[node name="PlusMoveButton" type="Button" parent="DebugButton"]
offset_right = 8.0
offset_bottom = 8.0
text = "+1Move"

[node name="PlusBuyButton" type="Button" parent="DebugButton"]
offset_left = 74.0
offset_right = 143.0
offset_bottom = 31.0
text = "+1Buy"

[node name="PlusBuyButton2" type="Button" parent="DebugButton"]
offset_left = 74.0
offset_top = 35.0
offset_right = 143.0
offset_bottom = 66.0
text = "+100Buy"

[node name="DrawButton" type="Button" parent="DebugButton"]
offset_left = 148.0
offset_right = 198.0
offset_bottom = 31.0
text = "Draw
"

[node name="PlusFightButton" type="Button" parent="DebugButton"]
offset_left = 203.0
offset_right = 268.0
offset_bottom = 31.0
text = "+1Fight"

[node name="EnemiesButton" type="Button" parent="DebugButton"]
offset_left = 273.0
offset_right = 347.0
offset_bottom = 31.0
text = "Enemies"

[node name="ClearEnemiesButton" type="Button" parent="DebugButton"]
offset_left = 353.0
offset_right = 471.0
offset_bottom = 31.0
text = "Clear Enemies"

[node name="PlusGoldButton" type="Button" parent="DebugButton"]
offset_left = 476.0
offset_right = 543.0
offset_bottom = 31.0
text = "+1 Gold"

[connection signal="pressed" from="PlayArea/PlayerCards/DrawPileButton" to="PlayArea/PlayerCards/DrawPileButton" method="_on_pressed"]
[connection signal="pressed" from="PlayArea/PlayerCards/DiscardPileButton" to="PlayArea/PlayerCards/DiscardPileButton" method="_on_pressed"]
[connection signal="pressed" from="PlayArea/EndTurnButton" to="PlayArea" method="_on_end_turn_button_pressed"]
[connection signal="gui_input" from="ShopPopup/GrayOut" to="ShopPopup" method="_on_gray_out_gui_input"]
[connection signal="gui_input" from="CardPileView/CardPileViewer" to="CardPileView/CardPileViewer" method="_on_gui_input"]
[connection signal="pressed" from="DebugButton/PlusMoveButton" to="." method="_on_plus_move_button_pressed"]
[connection signal="pressed" from="DebugButton/PlusBuyButton" to="." method="_on_plus_buy_button_pressed"]
[connection signal="pressed" from="DebugButton/PlusBuyButton2" to="." method="_on_plus_buy_button_2_pressed"]
[connection signal="pressed" from="DebugButton/DrawButton" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="DebugButton/PlusFightButton" to="." method="_on_plus_fight_button_pressed"]
[connection signal="pressed" from="DebugButton/EnemiesButton" to="." method="_on_enemies_button_pressed"]
[connection signal="pressed" from="DebugButton/ClearEnemiesButton" to="." method="_on_clear_enemies_button_pressed"]
[connection signal="pressed" from="DebugButton/PlusGoldButton" to="." method="_on_plus_gold_button_pressed"]
